force-app/main/default/objects/Tool_Tip__c/Tool_Tip__c.object-meta.xml
<CustomObject>
    <label>Help Text</label>
    <nameField>
        <displayFormat>H-{0000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Help Texts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>