force-app/main/default/objects/Tool_Tip__c/fields/Estimate__c.field-meta.xml
<CustomField>
    <fullName>Estimate__c</fullName>
    <label>Estimate</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>