force-app/main/default/objects/Tool_Tip__c/fields/Graphic_Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Graphic_Deliverable__c</fullName>
    <label>Graphic Deliverable</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>