force-app/main/default/objects/Tool_Tip__c/fields/Job_Specs__c.field-meta.xml
<CustomField>
    <fullName>Job_Specs__c</fullName>
    <label>Job Specs</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>