force-app/main/default/objects/Tool_Tip__c/fields/Job_Team__c.field-meta.xml
<CustomField>
    <fullName>Job_Team__c</fullName>
    <label>Job Team</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>