force-app/main/default/objects/Tool_Tip__c/fields/Job_Time__c.field-meta.xml
<CustomField>
    <fullName>Job_Time__c</fullName>
    <label>Job Time</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>