force-app/main/default/objects/Tool_Tip__c/fields/Production_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Production_Estimate__c</fullName>
    <label>Production Estimate</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>