force-app/main/default/objects/Tool_Tip__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <label>Purchase Order</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>