force-app/main/default/objects/Tool_Tip__c/fields/Vendor_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Invoice__c</fullName>
    <label>Vendor Invoice</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>